<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Wifi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="buttonUpdate">Scan Networks</string>
    <string name="createdby">Created by SpyDiKo\n2013 \u00a9 S.D.K.</string>
    <string name="updateFromServer">Update From Server</string>
    <string name="uploadPassword">Upload</string>
    <string name="cancelUploadPassword">Cancel</string>
    <string name="password">Enter password…</string>
    <string name="preferences">Preferences</string>
    <string name="localization_prefs">Localization Preferences</string>
    <string name="radius_pref_title">Area of interest</string>
    <string name="titlePrefs">Preferences</string>
    <string name="area_radius_sum">Set the area you want to download. Now set to:</string>
    <string name="logout">Logout</string>
    <string name="show_password">Show password</string>
    <string name="title_map_activity">Map</string>
    <string name="map_pref">Show Map</string>
    <string name="swipe_down_to_refresh">Swipe down to scan\nfor Wifi networks</string>
    <string name="pull2refresh">Pull to refresh</string>
    <string name="searching">Searching…</string>
    <string name="release">Release</string>
    <string name="setOnWifi">Enable on WiFi</string>
    <string name="number_of_uploads">Number of uploads:</string>
    <string name="click_to_refresh">Refresh</string>
    <string name="retrieve_location">Retrieving Location</string>
    <string name="estblish_connection">Connecting</string>
    <string name="downloading">Downloading</string>
    <string name="update_local_files">Updating local files</string>
    <string name="done">Done!</string>


</resources>
