<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemToggleService"
        android:title="@string/updateFromServer"
        android:icon="@android:drawable/stat_sys_download"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/scan_for_wifi"
        android:title="@string/click_to_refresh"
        android:icon="@android:drawable/stat_notify_sync"
        android:visible="false"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/preferences"
        android:title="@string/preferences"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"/>
    <item
        android:id="@+id/map_pref"
        android:title="@string/map_pref"/>

    <!--<item-->
    <!--android:id="@+id/setOnWifi"-->
    <!--android:title="@string/setOnWifi"-->
    <!--android:checkable="true"/>-->
</menu>
